--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -238,8 +238,8 @@
             <legend>Find the closest and freshest product</legend>
             <div>
               <label for="customer-address-product">{{ 'layout.product.your_address_delivery' | t }}</label>
-              <input class="form__input full-width js-autocomplete-address" type="text" name="_address" value="{% unless cart.attributes.customer_address contains 'ick up' %}{{cart.attributes['customer_address']}}{% endunless %}" id="customer-address-product">
-              <input class="js-customer-address" type="hidden" name="properties[_address]" value="{% unless cart.attributes.customer_address contains 'ick up' %}{{cart.attributes['customer_address']}}{% endunless %}">
+              <input class="form__input full-width js-autocomplete-address" type="text" name="_address" value="{% unless cart.attributes.customer_address contains 'ick up' %}{{cart.attributes['customer_address'] | replace: 'Delivery address: ', ''}}{% endunless %}" id="customer-address-product">
+              <input class="js-customer-address" type="hidden" name="properties[_address]" value="{% unless cart.attributes.customer_address contains 'ick up' %}{{cart.attributes['customer_address'] | replace: 'Delivery address: ', ''}}{% endunless %}">
             </div>
             <p class="hide js-invalid-address product-single__pallet-msg product-single__pallet-msg--unavailable product-single__pallet-msg--wrong-quantity">Please enter a valid address</p>
             <p class="product-single__warn-msg">{{ 'layout.product.customer_address_extra_info' | t }}</p>
