fix shipping not showing in checkout

--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -195,7 +195,13 @@
       const hideShippingMethods = function () {
         const deliveryType = window.localStorage.getItem('delivery_type');
         const labels = [].slice.call(document.getElementsByClassName('radio__label__primary'));
-        const lowercasedDeliveryType = deliveryType.toLocaleLowerCase() === 'first_off_truck' ? 'before 9am' : deliveryType.toLocaleLowerCase();
+        let lowercasedDeliveryType = deliveryType.toLocaleLowerCase() === 'first_off_truck' ? 'before 9am' : deliveryType.toLocaleLowerCase();
+        if (
+          lowercasedDeliveryType === 'standard_delivery' ||
+          cartAttributes.indexOf('freight') > -1
+        ) {
+          lowercasedDeliveryType = 'standard';
+        }
 
         for (let i = 0; i < labels.length; i++) {
           const label = labels[i].innerHTML.trim();
@@ -206,6 +212,14 @@
           if (cartAttributes.indexOf('[sqft_sod_quantity]') > -1 && lowercasedDeliveryType !== 'pickup') {
             if (
               lowercasedLabel.indexOf('include') > -1 &&
+              (
+                lowercasedLabel.indexOf(lowercasedDeliveryType.replace('_', ' ')) > -1 ||
+                lowercasedDeliveryType.replace('_', ' ').indexOf(lowercasedLabel) > -1
+              )
+            ) {
+              containsMethod = true;
+            } else if (
+              lowercasedLabel.indexOf('include') < 0 &&
               (
                 lowercasedLabel.indexOf(lowercasedDeliveryType.replace('_', ' ')) > -1 ||
                 lowercasedDeliveryType.replace('_', ' ').indexOf(lowercasedLabel) > -1
