prod changes - shop pay

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -5040,3 +5040,11 @@ button {
   position: absolute;
   width: 1px;
 }
+
+/* HC - Shopify Pay Installments added - 30 Sep '21 */
+.hc-installments-wrapper {
+  margin-bottom: 20px;
+}
+.product-single__policies.rte {
+  margin-bottom: 20px;
+}
