prod chages - announcement bar

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -331,5 +331,9 @@
         })();
     </script>
   {%- endunless -%}
+
+<!-- **BEGIN** Hextom QAB Integration // Main Include - DO NOT MODIFY -->
+    {% render 'hextom_qab_main', product: product, customer: customer %}
+    <!-- **END** Hextom QAB Integration // Main Include - DO NOT MODIFY -->
 </body>
 </html>
