prod changes - text update

--- a/sections/ss-footer.liquid
+++ b/sections/ss-footer.liquid
@@ -65,7 +65,7 @@
 
       <div class="flex flex--has-gutter flex--row flex--wrap">
         <div class="flex__item col-3 col-6--tablet-only footer__col">
-          <h3>Get a Quote</h3><hr><p>With 7 farms and 13 stores, Super-Sod can provide you with unmatched availability and selection of grasses. We ship throughout Georgia, South Carolina, and North Carolina.</p>
+          <h3>Get a Quote</h3><hr><p>With 9 farms and 19 stores, Super-Sod provides you with unmatched availability and selection of turf grasses. We ship throughout Georgia, South Carolina, North Carolina, and Tennessee.</p>
           
             <a class="button button--tertiary" href="https://info.supersod.com/sod-prices-free-sod-quote">Get a Quote</a>
           
