--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -196,12 +196,12 @@
       <input type="hidden" class="js-address-longitude" value="{{cart.attributes.customer_longitude}}">
 
       {% form 'product', product, class: product_classes, data-ajax-add-to-cart: true, data-product-id: product.id, data-enable-history-state: history_state_data %}
-      
+
       <!-- HC - Shopify Pay Installments added - 30 Sep '21 -->
       <div class="hc-installments-wrapper">
         {{ form | payment_terms }}
       </div>
-      
+
       {%- if shop.taxes_included or shop.shipping_policy.body != blank -%}
       <div class="product-single__policies rte">
         {%- if shop.taxes_included -%}
@@ -212,7 +212,7 @@
         {%- endif -%}
       </div>
       {%- endif -%}
-      
+
       {%- if use_check == true or uses_normal_toggle == true -%}
 
         <input type="hidden" name="properties[pickup_location]" class="js-pickup-location" value="">
@@ -221,7 +221,7 @@
           <legend>Choose delivery or pickup</legend>
           {%- unless is_pickup_only -%}
             <input type="radio" name="properties[_method]" class="toggle-input hide js-delivery-method" id="delivery-method" value="delivery" checked>
-            <label for="delivery-method" class="toggle-label">
+            <label for="delivery-method" class="toggle-label js-msg-availability">
               {{ 'layout.product.delivery' | t }}
               {% if product.type == 'Sod' or product.type == 'sod' %}<small class="toggle-label__instructions">Minimum order of 500 square feet of sod</small>{% endif %}
             </label>
@@ -229,7 +229,7 @@
 
           {%- unless is_delivery_only -%}
             <input type="radio" name="properties[_method]" class="toggle-input hide js-delivery-method" id="pickup-method" value="pickup"{% if is_pickup_only %} checked{% endif %}>
-            <label for="pickup-method" class="toggle-label">
+            <label for="pickup-method" class="toggle-label js-msg-availability">
               {{ 'layout.product.pickup' | t }}
               <small class="toggle-label__instructions">Pickup will be at your nearest store.</small>
             </label>
@@ -470,9 +470,9 @@
 
       {% endform %}
       {%- if use_pallet == true or use_check == true -%}
-      <p class="product-single__pallet-msg product-single__pallet-msg--unavailable js-not-available-delivery hide">{{ 'products.product.delivery_unavailable_html' | t }}</p>
-      <p class="product-single__pallet-msg product-single__pallet-msg--unavailable js-not-available-text hide">{{ 'products.product.pallet_unavailable_html' | t }}</p>
-      <p class="product-single__pallet-msg product-single__pallet-msg--unavailable js-not-available-pickup-text hide">{{ 'products.product.pickup_unavailable_html' | t }}</p>
+      <p class="product-single__pallet-msg product-single__pallet-msg--unavailable js-pallet__msg-unavailable js-not-available-delivery hide">{{ 'products.product.delivery_unavailable_html' | t }}</p>
+      <p class="product-single__pallet-msg product-single__pallet-msg--unavailable js-pallet__msg-unavailable js-not-available-text hide">{{ 'products.product.pallet_unavailable_html' | t }}</p>
+      <p class="product-single__pallet-msg product-single__pallet-msg--unavailable js-pallet__msg-unavailable js-not-available-pickup-text hide">{{ 'products.product.pickup_unavailable_html' | t }}</p>
       {%- if uses_normal_toggle == false and use_variant_toggle == false -%}
       <p class="product-single__pallet-msg">{{ 'products.product.sod_picker_text_html' | t }}</p>
       {%- endif -%}
